gcc/testsuite/gdc.test/compilable/imports/test21501c.d
module imports.test21501c;

alias C = int;
const D = 1;
