gcc/testsuite/gdc.test/fail_compilation/imports/imp1.d
module imports.imp1;

enum X = 1;
enum Y = 1;
enum Z = 1;
